--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Article preview component</title>
@@ -15,22 +15,33 @@
   </style>
 </head>
 <body>
+  <main>
+    <article class="card">
+      <section class="image"></section>
+      <article class="content">
+        <h2 class="headline">Shift the overall look and feel by adding these wonderful 
+        touches to furniture in your home</h2>
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
+        <p class="paragraph">Ever been in a room and felt like something was missing? Perhaps 
+        it felt slightly bare and uninviting. I’ve got some simple tips 
+        to help you make any room feel complete.</p>
+      </article>
+      <footer>
+        <div class="info">
+          <img src="./images/avatar-michelle.jpg" alt="Michelle Appleton" class="avatar">
+          <div class="identity">
+            <h2 class="name">Michelle Appleton</h2>
+            <p class="date">28 Jun 2020</p>
+          </div>
+          <img src="./images/icon-share.svg" alt="share" class="share-icon">
+        </div>
+        <h2 class="hidden">Share</h2>
+      </footer>
+    </article>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/eerolli" target="_blank">Eero Liuska</a>.
   </div>
 </body>
 </html>
