--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <p class="paragraph">Ever been in a room and felt like something was missing? Perhaps 
         it felt slightly bare and uninviting. I’ve got some simple tips 
         to help you make any room feel complete.</p>
-      </article>
       <footer>
         <div class="info">
           <img src="./images/avatar-michelle.jpg" alt="Michelle Appleton" class="avatar">
@@ -35,13 +34,16 @@
           </div>
           <img src="./images/icon-share.svg" alt="share" class="share-icon">
         </div>
-        <h2 class="hidden">Share</h2>
+        <div class="share">
+            <h2>Share</h2>
+        </div>
       </footer>
+      </article>
     </article>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/eerolli" target="_blank">Eero Liuska</a>.
+    </div>
   </main>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/eerolli" target="_blank">Eero Liuska</a>.
-  </div>
 </body>
 </html>
