--- a/index.html
+++ b/index.html
@@ -15,35 +15,26 @@
   </style>
 </head>
 <body>
-  <main>
-    <article class="card">
-      <section class="image"></section>
-      <article class="content">
-        <h2 class="headline">Shift the overall look and feel by adding these wonderful 
-        touches to furniture in your home</h2>
-
-        <p class="paragraph">Ever been in a room and felt like something was missing? Perhaps 
-        it felt slightly bare and uninviting. I’ve got some simple tips 
-        to help you make any room feel complete.</p>
-      <footer>
-        <div class="info">
-          <img src="./images/avatar-michelle.jpg" alt="Michelle Appleton" class="avatar">
-          <div class="identity">
-            <h2 class="name">Michelle Appleton</h2>
-            <p class="date">28 Jun 2020</p>
-          </div>
-          <img src="./images/icon-share.svg" alt="share" class="share-icon">
-        </div>
-        <div class="share">
-            <h2>Share</h2>
-        </div>
-      </footer>
-      </article>
-    </article>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/eerolli" target="_blank">Eero Liuska</a>.
-    </div>
+  <main class="card">
+    <section class="hero">
+      <img src="./images/drawers.jpg" alt="Drawers" class="image">
+    </section>
+    <section class="middle">     
+      <h2 class="headline">
+          Shift the overall look and feel by adding these wonderful touches to furniture in your home
+      </h2>      
+      <p class="paragraph">Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. 
+        I’ve got some simple tips to help you make any room feel complete.</p>      
+    </section>
+    <section class="bottom">
+      <img src="./images/avatar-michelle.jpg" alt="Michelle Appleton" class="avatar">
+      <div class="identity">
+        <h2 class="name">Michelle Appleton</h2>
+        <p class="date">28 Jun 2020</p>
+      </div>
+      <img src="./images/icon-share.svg" alt="share-icon" class="share-icon">
+    </section>
   </main>
 </body>
+<script src="index.js"></script>
 </html>
